--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,17 @@
 	    <version>7.6.0</version>
 	    <scope>test</scope>
 	</dependency>
-
+	<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+	<dependency>
+	    <groupId>org.seleniumhq.selenium</groupId>
+	    <artifactId>selenium-java</artifactId>
+	    <version>4.4.0</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+	<dependency>
+	    <groupId>io.github.bonigarcia</groupId>
+	    <artifactId>webdrivermanager</artifactId>
+	    <version>5.3.0</version>
+	</dependency>
   </dependencies>
 </project>
